feat: add API XML-documentation and automate Swagger specification generation
