# spec/swagger/v1/swagger.yaml
@@ -1,12 +1,14 @@
 openapi: 3.0.1
 info:
   title: Crowd Parlay Social API
-  version: v1
+  description: RESTful API of the Crowd Parlay's Social service.
+  version: '1.0'
 paths:
-  '/api/authors/{authorId}':
+  '/api/v1/authors/{authorId}':
     get:
       tags:
         - Authors
+      summary: Returns author with the specified ID.
       parameters:
         - name: authorId
           in: path
@@ -28,10 +30,11 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/AuthorDto'
-  '/api/comments/{commentId}':
+  '/api/v1/comments/{commentId}':
     get:
       tags:
         - Comments
+      summary: Returns comment with the specified ID.
       parameters:
         - name: commentId
           in: path
@@ -53,10 +56,11 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/CommentDto'
-  /api/comments:
+  /api/v1/comments:
     get:
       tags:
         - Comments
+      summary: Returns all comments created by author with the specified ID.
       parameters:
         - name: authorId
           in: query
@@ -86,8 +90,12 @@ paths:
     post:
       tags:
         - Comments
+      summary: Creates a comment.
       requestBody:
         content:
+          application/json-patch+json:
+            schema:
+              $ref: '#/components/schemas/CommentRequest'
           application/json:
             schema:
               $ref: '#/components/schemas/CommentRequest'
@@ -110,10 +118,11 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/CommentDto'
-  '/api/comments/{targetCommentId}/reply':
+  '/api/v1/comments/{targetCommentId}/reply':
     post:
       tags:
         - Comments
+      summary: Creates a reply to comment with the specified ID.
       parameters:
         - name: targetCommentId
           in: path
@@ -124,6 +133,9 @@ paths:
             format: uuid
       requestBody:
         content:
+          application/json-patch+json:
+            schema:
+              $ref: '#/components/schemas/CommentRequest'
           application/json:
             schema:
               $ref: '#/components/schemas/CommentRequest'
